updated happy hour guide page and started zephyr

--- a/folder/MyResume/MyResume/happyHourGuide.html
+++ b/folder/MyResume/MyResume/happyHourGuide.html
@@ -50,16 +50,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/happyHourFirst.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/happyHourSelection.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -70,16 +70,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Web design, API usage</li>
+                <li><strong>Project URL</strong>: <a href="https://thehappyhourguide.netlify.app/">https://thehappyhourguide.netlify.app/</a></li>
+                <li><strong>GitHub Repo</strong>: <a href="https://github.com/ladybluenotes/TheHappyHourGuide">https://github.com/ladybluenotes/TheHappyHourGuide</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Project details</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                JavaScript, CSS3, HTML5 - In this project, an API was used to allow users to generate the recipes to either their favourite recipes or allow them to select a random one!
               </p>
             </div>
           </div>
