--- a/folder/MyResume/MyResume/zephyrSalon.html
+++ b/folder/MyResume/MyResume/zephyrSalon.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Zephyr Salon</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -77,7 +77,7 @@
             <div class="portfolio-description">
               <h2>This is an example of portfolio detail</h2>
               <p>
-                JavaScript, CSS3, HTML5 - In this project, an API was used to allow users to generate the recipes to either their favourite recipes or allow them to select a random one!
+                JavaScript, CSS3, HTML5 - A completed website for a beauty salon, showing off services as well as staff. Features web pages dedicated to the staff and the story of the salon as well as a contact form should customers have questions.
               </p>
             </div>
           </div>
