--- a/folder/MyResume/MyResume/zephyrSalon.html
+++ b/folder/MyResume/MyResume/zephyrSalon.html
@@ -50,11 +50,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/happyHourFirst.jpg" alt="">
+                  <img src="assets/img/portfolio/zephyrFront.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/happyHourSelection.jpg" alt="">
+                  <img src="assets/img/portfolio/zephyrAbout.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/zephyrNav.png" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -75,7 +79,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Project Details</h2>
               <p>
                 JavaScript, CSS3, HTML5 - A completed website for a beauty salon, showing off services as well as staff. Features web pages dedicated to the staff and the story of the salon as well as a contact form should customers have questions.
               </p>
