task list page made

--- a/folder/MyResume/MyResume/taskList.html
+++ b/folder/MyResume/MyResume/taskList.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Zephyr Salon</title>
+  <title>Task List</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,15 +50,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zephyrFront.png" alt="">
+                  <img src="assets/img/portfolio/taskListMain.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zephyrAbout.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/zephyrNav.png" alt="">
+                  <img src="assets/img/portfolio/taskListUsed.png" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -74,14 +70,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project URL</strong>: <a href="https://zephyrsalon.netlify.app/">https://zephyrsalon.netlify.app/</a></li>
+                <li><strong>Category</strong>: Web design, App Design</li>
+                <li><strong>Project URL</strong>: <a href="https://peacefultasks.netlify.app/">https://peacefultasks.netlify.app/</a></li>
+                <li><strong>GitHub Repo</strong>: <a href="https://github.com/LadyBluenotes/TaskList">https://github.com/LadyBluenotes/TaskList</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project details</h2>
               <p>
-                JavaScript, CSS3, HTML5 - A completed website for a beauty salon, showing off services as well as staff. Features web pages dedicated to the staff and the story of the salon as well as a contact form should customers have questions.
+                JavaScript, CSS3, HTML5 - Created a vanilla JavaScript application allowing the user to create and maintain a task list.
               </p>
             </div>
           </div>
