--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" value='contact' name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-c1ontrol" value='contact' name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-c1ontrol" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
