--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form method="post" role="form" class="php-email-form" data-netlify="true" name="contact">
+            <form method="post" role="form" data-netlify="true" name="contact">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required
@@ -359,7 +359,7 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button class ='formButton' type="submit">Send Message</button></div>
             </form>
 
           </div>
@@ -381,18 +381,12 @@
       <div class="social-links">
         <a href="https://twitter.com/LadyBluenotes" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/LadyBluenotes" class="facebook"><i class="bx bxl-github"></i></a>
-        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/sarahgerrard/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Sarah Gerrard</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
