--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Sarah Gerrard</h1>
-      <p>I'm <span class="typed" data-typed-items="Full-Stack Developer, Freelancer"></span></p>
+      <p><span class="typed" data-typed-items="Full-Stack Developer, Freelancer, Tech Aficionado"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/LadyBluenotes" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/LadyBluenotes" class="facebook"><i class="bx bxl-github"></i></a>
@@ -123,8 +123,9 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">ALL</li>
-              <li data-filter=".filter-backend">FRONT-END</li>
-              <li data-filter=".filter-fullstack">BACK-END</li>
+              <li data-filter=".filter-frontend">FRONT-END</li>
+              <li data-filter=".filter-backend">BACK-END</li>
+              <li data-filter=".filter-fullstack">FULL-STACK</li>
               <li data-filter=".filter-javascript">JAVASCRIPT</li>
               <li data-filter=".filter-html">HTML</li>
               <li data-filter=".filter-css">CSS</li>
@@ -137,7 +138,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-javascript filter-html filter-css">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Happy Hour Guide webpage preview">
               <div class="portfolio-info">
@@ -151,7 +152,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-html filter-css">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -165,7 +166,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-html filter-css filter-javascript">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -179,7 +180,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -193,7 +194,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html filter-javascript">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
