--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a creative, detail-oriented, software developer with drive to continuously improve my skills. I have a proven track record of creating and implementing successful front and back-end web applications. Currently, I'm looking to bring my skills to a tech company with global reach targeting full-stack, front-end, or back-end roles.</p>
+          <p>I am a creative, detail-oriented, software developer with drive to continuously 1improve my skills. I have a proven track record of creating and implementing successful front and back-end web applications. Currently, I'm looking to bring my skills to a tech company with global reach targeting full-stack, front-end, or back-end roles.</p>
         </div>
 
         <div class="row">
