--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>My Recent work></h2>
+          <h2>My Recent work</h2>
           <p>Here are a few projects I've worked on recently. Any questions? <a href="mailto:gerrardsarah@gmail.com">Email me.</a></p>
         </div>
 
