updated with pokedex

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <li data-filter=".filter-css">CSS</li>
               <li data-filter=".filter-reactjs">REACT.JS</li>
               <li data-filter=".filter-mongodb">MONGO.DB</li>
-              <li data-filter=".filter-css">NODE.JS</li>
+              <li data-filter=".filter-nodejs">NODE.JS</li>
             </ul>
           </div>
         </div>
@@ -202,8 +202,21 @@
                 <p>Show NASA's APOD.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="welcomeToSpace.html
-                  " class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="welcomeToSpace.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html filter-javascript filter-reactjs filter-nodejs>
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>The PokeDex</h4>
+                <p>Showing pokemon and their details.</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="thePokeDex.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
