fixed pokedex photo

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html filter-javascript filter-reactjs filter-nodejs>
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>The PokeDex</h4>
                 <p>Showing pokemon and their details.</p>
