--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html filter-javascript filter-reactjs filter-nodejs>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-css filter-html filter-javascript filter-reactjs filter-nodejs">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
