--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.SarahGerrard.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>SarahGerrard.netlify.app</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>British Columbia, Canada</span></li>
                 </ul>
