finished implementing node mailer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sarah Gerrard - Full Stack Developer</title>
+  <title>Harmony - Full Stack Developer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,12 +58,12 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Sarah Gerrard</h1>
+      <h1>Harmony</h1>
       <p><span class="typed" data-typed-items="Full-Stack Developer, Freelancer, Tech Aficionado"></span></p>
       <div class="social-links">
-        <a href="https://twitter.com/LadyBluenotes" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://github.com/LadyBluenotes" class="facebook"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/sarahgerrard/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/harmony_web3" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://github.com/Harmonygrams" class="facebook"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/harmonygrams/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -88,14 +88,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>SarahGerrard.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://www.chibuike.net</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>British Columbia, Canada</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Abuja, Nigeria</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>GerrardSarah@Gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>bluedonice@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -111,7 +111,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -220,12 +220,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> 
 
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
@@ -238,27 +238,6 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-blue">
-              <div class="icon">
-                <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
-              </div>
-              <h4><a href="">HTML5</a></h4>
-              <p>The markup language used for structuring and presenting content.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box iconbox-orange ">
-              <div class="icon">
-                <img  class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
-              </div>
-              <h4><a href="">CSS3</a></h4>
-              <p>The standard used in the styling and formatting of web pages.</p>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
@@ -319,6 +298,16 @@
               <p>A code hosting platform for version control and collaboration.</p>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box iconbox-teal">
+              <div class="icon">
+                <img style="max-width:100%" src="./assets/img/portfolio/tailwindcss.svg" />
+
+              </div>
+              <h4><a href="https://github.com/">Typescript</a></h4>
+              <p>A utility-first CSS framework that makes it quicker to write and maintain the code of your application.</p>
+            </div>
+          </div>
 
         </div>
 
@@ -341,13 +330,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>British Columbia, Canada</p>
+                <p>Abuja, Nigeria</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>GerrardSarah@gmail.com</p>
+                <p>bluedonice@gmail.com</p>
               </div>
 
 
@@ -357,7 +346,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form method="post" role="form" data-netlify="true" name="contact">
+            <form method="POST" role="form" id="contact-form" data-netlify="true" name="contact" action="send" enctype="multipart/form-data">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required
@@ -373,11 +362,10 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="text-center"><button class ='formButton' type="submit">Send Message</button></div>
+              <div class="text-center"><button class ='formButton' value="submit" type="submit">Send Message</button></div>
             </form>
 
           </div>
-
         </div>
 
       </div>
@@ -390,7 +378,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Sarah Gerrard</h3>
+      <h3> Harmony </h3>
       <p>A software developer striving to continuously improve my skills through creating and implementing front and back-end applications.</p>
       <div class="social-links">
         <a href="https://twitter.com/LadyBluenotes" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -398,10 +386,10 @@
         <a href="https://www.linkedin.com/in/sarahgerrard/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Sarah Gerrard</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Harmony</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -422,6 +410,9 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  
+  <!-- Custom JS File -->
+  <script src="assets/js/submitFormData.js"></script>
 
 </body>
 
